# fletx-news-app

./: .gitignore  README.md  demo_app.db  main.py  pyproject.toml  requirements.txt
.fletx/: config.json
app/: __init__.py  routes.py
app/components/: ReactiveTextField.py  __init__.py  newscard_component.py  popularlist_component.py  reactivelist_component.py
app/controllers/: __init__.py  news_controller.py
app/models/: __init__.py  article.py
app/pages/: __init__.py  counter.py  details_page.py  home_page.py  onboarding_page.py
app/services/: __init__.py  news_service.py
app/utils/: __init__.py  articles.py  images.py  theme.py
